Thu Apr 26 14:25:09 UTC 2007  Yan Dai  <dai_y@ociweb.com>

        * dds/DCPS/DataReaderImpl.cpp:
        * dds/DCPS/DataWriterImpl.cpp:
        * dds/DCPS/PublisherImpl.h:
        * dds/DCPS/PublisherImpl.cpp:
        * dds/DCPS/SubscriberImpl.h:
        * dds/DCPS/SubscriberImpl.cpp:
        * dds/DCPS/transport/framework/DataLink.h:
        * dds/DCPS/transport/framework/DataLink.cpp:
        * dds/DCPS/transport/framework/DataLinkSet.h:
        * dds/DCPS/transport/framework/DataLinkSet.cpp:
        * dds/DCPS/transport/framework/DataLinkSetMap.h:
        * dds/DCPS/transport/framework/DataLinkSetMap.cpp:
        * dds/DCPS/transport/framework/ReceiveListenerSet.h:
        * dds/DCPS/transport/framework/ReceiveListenerSet.cpp:
        * dds/DCPS/transport/framework/RepoIdSet.h:
        * dds/DCPS/transport/framework/RepoIdSet.inl:
        * dds/DCPS/transport/framework/RepoIdSet.cpp:
        * dds/DCPS/transport/framework/RepoIdSetMap.cpp:
        * dds/DCPS/transport/framework/TransportInterface.h:
        * dds/DCPS/transport/framework/TransportInterface.cpp:

          Fixed bug in transport and DCPS layer that remove_association()
          removes all assoications related to the remote id provided by
          the DCPSInfoRepo. It should just remove the association of
          the remote id and local id and the link only used by them.
          
        * bin/dcps_tests.lst:

          Added TransientLocalTest test.

        * tests/DCPS/TransientLocalTest/DataReaderListener.h:
        * tests/DCPS/TransientLocalTest/DataReaderListener.cpp:
        * tests/DCPS/TransientLocalTest/MessageTypeSupport.idl:
        * tests/DCPS/TransientLocalTest/MessageTypeSupportImpl.h:
        * tests/DCPS/TransientLocalTest/MessageTypeSupportImpl.cpp:
        * tests/DCPS/TransientLocalTest/Messenger.idl:
        * tests/DCPS/TransientLocalTest/README:
        * tests/DCPS/TransientLocalTest/TransientLocalTest.mpc:
        * tests/DCPS/TransientLocalTest/Writer.h: